# SlopLens

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  slop-lens.yml
src/: ai_attribution.rs  analyze.rs  baseline.rs  config.rs  demo.rs  git_ingest.rs  ir.rs  lib.rs  main.rs  report.rs  scoring.rs
