[package]
name = "slop-lens"
version = "0.1.0"
edition = "2024"
authors = ["Loping151"]
license = "MIT"
description = "Git-aware AI code debt scanner: who introduced debt, when, and was AI suspected"
repository = "https://github.com/Loping151/slop-lens"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tree-sitter = "0.25"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
